# SimpleMessenger

./: .gitignore  Dockerfile  README.md  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  airflow  cache.py  collection-0--8758905758931491508.wt  collection-2--8758905758931491508.wt  consumer.py  database.py  docker-compose.yml  index-1--8758905758931491508.wt  index-3--8758905758931491508.wt  main.py  main2.py  messenger.db  models.py  models_mongo.py  mongodb.py  requirements.txt  run.txt  sizeStorer.wt  trial.ipynb
MessengerClient/: CMakeLists.txt  Dockerfile  MessengerClient_fa_IR.ts  apiclient.cpp  apiclient.h  build_appimage.sh  how.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mingw64-toolchain.cmake  ui_messenger.h
MessengerClient/build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
MessengerClient/build-windows/MessengerClient_autogen/: deps  moc_predefs.h
MessengerClient/build-windows/MessengerClient_autogen/EWIEGA46WW/: moc_apiclient.cpp  moc_apiclient.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
MessengerClient/build-windows/MessengerClient_autogen/include/: ui_mainwindow.h
css/: styles.css
diagnostic.data/: metrics.2025-04-15T15-12-55Z-00000
templates/: chat.html  chats.html  index.html  login.html  signup.html  welcome.html
